# spearbit-seminar-2023-02

./: .env.example  .gitignore  README.md  ape-config.yaml  pyproject.toml
contracts/: Option.sol  Oracle.sol
contracts/interfaces/: IOracle.sol  IWETH9.sol
notebook/: queries.ipynb  risk.ipynb
notebook/data/: prices.csv
tests/: test_option.py
